# packages/integration-tests/fixtures/RestApi/openapiFakerDatalayer.json
@@ -128,6 +128,47 @@
                 }
             }
         },
+        "/UploadedFile/dropdown-options/{property}": {
+            "post": {
+                "tags": [
+                    "UploadedFile"
+                ],
+                "description": "Returns dropdown options for a specific input",
+                "operationId": "cms.dropdown_options.UploadedFile",
+                "parameters": [
+                    {
+                        "name": "property",
+                        "in": "path",
+                        "description": "property of instance of PartialInput",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/PartialInput-post"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/PartialInput-post"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/DropdownOptionList-get"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/User/dropdown-options/{property}": {
             "post": {
                 "tags": [
@@ -484,7 +525,7 @@
                     "resource"
                 ],
                 "description": "Creates an instance of Animal",
-                "operationId": "post-Animal",
+                "operationId": "put-Animal",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -642,7 +683,7 @@
                     "resource"
                 ],
                 "description": "Creates an instance of PrimitiveOnly",
-                "operationId": "post-PrimitiveOnly",
+                "operationId": "put-PrimitiveOnly",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -818,6 +859,164 @@
                 ]
             }
         },
+        "/UploadedFile": {
+            "post": {
+                "tags": [
+                    "UploadedFile",
+                    "resource"
+                ],
+                "description": "Creates an instance of UploadedFile",
+                "operationId": "put-UploadedFile",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/File-post"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Resource was created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/File-get"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Throwable-get"
+                                }
+                            }
+                        }
+                    },
+                    "405": {
+                        "description": "Invalid request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Throwable-get"
+                                }
+                            }
+                        }
+                    },
+                    "406": {
+                        "description": "Invalid request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Throwable-get"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "A validation error occurred",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ValidationException-get"
+                                }
+                            }
+                        }
+                    },
+                    "409": {
+                        "description": "Resource not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Throwable-get"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "get": {
+                "tags": [
+                    "UploadedFile",
+                    "resource"
+                ],
+                "description": "Gets a list of resource that are an instance of UploadedFile",
+                "operationId": "get-all-UploadedFile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "required": [
+                                        "totalCount",
+                                        "first",
+                                        "last",
+                                        "list"
+                                    ],
+                                    "type": "object",
+                                    "properties": {
+                                        "totalCount": {
+                                            "type": "integer"
+                                        },
+                                        "first": {
+                                            "type": "string",
+                                            "format": "uri"
+                                        },
+                                        "last": {
+                                            "type": "string",
+                                            "format": "uri"
+                                        },
+                                        "prev": {
+                                            "type": "string",
+                                            "format": "uri"
+                                        },
+                                        "next": {
+                                            "type": "string",
+                                            "format": "uri"
+                                        },
+                                        "list": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/File-get"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "schema": {
+                            "minLength": 1,
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "query[id]",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "query[file]",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ]
+            }
+        },
         "/User": {
             "post": {
                 "tags": [
@@ -825,7 +1024,7 @@
                     "resource"
                 ],
                 "description": "Creates an instance of User",
-                "operationId": "post-User",
+                "operationId": "put-User",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -1382,6 +1581,123 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/components/schemas/PrimitiveOnlyIdentifier-post"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Resource was deleted"
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Throwable-get"
+                                }
+                            }
+                        }
+                    },
+                    "405": {
+                        "description": "Invalid request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Throwable-get"
+                                }
+                            }
+                        }
+                    },
+                    "406": {
+                        "description": "Invalid request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Throwable-get"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "A validation error occurred",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ValidationException-get"
+                                }
+                            }
+                        }
+                    },
+                    "409": {
+                        "description": "Resource not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Throwable-get"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/UploadedFile/{id}": {
+            "get": {
+                "tags": [
+                    "UploadedFile",
+                    "resource"
+                ],
+                "description": "Gets a resource of UploadedFile with a specific id",
+                "operationId": "get-single-UploadedFile",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of instance of UploadedFile",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/UploadedFileIdentifier-post"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/File-get"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Resource not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Throwable-get"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "UploadedFile",
+                    "resource"
+                ],
+                "description": "Removes an instance of UploadedFile",
+                "operationId": "remove-single-UploadedFile",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of instance of UploadedFile",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/UploadedFileIdentifier-post"
                         }
                     }
                 ],
@@ -2758,6 +3074,40 @@
                 "nullable": true,
                 "properties": {}
             },
+            "File-get": {
+                "type": "object",
+                "required": [
+                    "id",
+                    "file",
+                    "stream"
+                ],
+                "properties": {
+                    "id": {
+                        "$ref": "#/components/schemas/UploadedFileIdentifier-get"
+                    },
+                    "file": {
+                        "$ref": "#/components/schemas/UploadedFile-get"
+                    },
+                    "stream": {
+                        "$ref": "#/components/schemas/mixed"
+                    }
+                }
+            },
+            "File-post": {
+                "type": "object",
+                "required": [
+                    "id",
+                    "file"
+                ],
+                "properties": {
+                    "id": {
+                        "$ref": "#/components/schemas/UploadedFileIdentifier-post"
+                    },
+                    "file": {
+                        "$ref": "#/components/schemas/UploadedFile-post"
+                    }
+                }
+            },
             "FirstName-get": {
                 "type": "string",
                 "format": "firstname",
@@ -3447,6 +3797,24 @@
                         "$ref": "#/components/schemas/mixed"
                     }
                 }
+            },
+            "UploadedFile-get": {
+                "type": "string",
+                "format": "binary"
+            },
+            "UploadedFile-post": {
+                "type": "string",
+                "format": "binary"
+            },
+            "UploadedFileIdentifier-get": {
+                "type": "string",
+                "format": "uploadedfileidentifier",
+                "pattern": "^[a-f0-9]{8}\\-[a-f0-9]{4}\\-[a-f0-9]{4}\\-[a-f0-9]{4}\\-[a-f0-9]{12}$"
+            },
+            "UploadedFileIdentifier-post": {
+                "type": "string",
+                "format": "uploadedfileidentifier",
+                "pattern": "^[a-f0-9]{8}\\-[a-f0-9]{4}\\-[a-f0-9]{4}\\-[a-f0-9]{4}\\-[a-f0-9]{12}$"
             },
             "User-get": {
                 "type": "object",
